# Approximate-Bitap

./: CMakeLists.txt  Makefile  README.md  baseline.cpp  driver.cpp  helper.cpp  include.h  partition.cpp  partition_parallel.cpp
sequences/: large_p.txt  med_p.txt  med_t.txt  pattern_0.txt  pattern_1.txt  pattern_2.txt  pattern_3.txt  pattern_4.txt  pattern_5.txt  pattern_6.txt  pattern_7.txt  small_p.txt  small_t.txt
